fix image not loading bug

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Nukagrizz.github.io/Joe-Portfolio",
+  "homepage": "http://NukaGrizz.github.io/Joe-React-Portfolio",
   "name": "joe-react-portfolio",
   "version": "0.1.0",
   "private": true,
